added placeholder for email field in user creation

--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -10,6 +10,7 @@
     "createUserTitle": "Neuen Benutzer erstellen",
     "createUserSubmitLabel": "Erstellen",
     "createUserInputPlaceholder": "Dein Benutzername",
+    "createUserEmailInputPlaceholder": "Deine Email (Optional)",
     "createUserExists": "Benutzer „{{name}}” existiert bereits",
     "back": "Zurück",
     "cancel": "Abbrechen",
