--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -10,6 +10,7 @@
     "createUserTitle": "Create new user",
     "createUserSubmitLabel": "Create user",
     "createUserInputPlaceholder": "your username",
+    "createUserEmailInputPlaceholder": "your email (optional)",
     "createUserExists": "User „{{name}}” already exists",
     "back": "back",
     "cancel": "Cancel",
